fix(ui): social media icons alignment

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -27,8 +27,11 @@
 }
 
 .footer-social-icon {
-  margin-left: 15px;
   width: 32px;
+} 
+
+.footer-social-icons-row {
+  margin: inherit;
 }
 
 .bounce-out-on-hover {
@@ -37,6 +40,7 @@
   transform: perspective(1px) translateZ(0);
   transition-duration: .5s;
   vertical-align: middle;
+  padding: 4px;
 }
 
 .bounce-out-on-hover:hover,
